# MyNovel2EPUB

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.github/workflows/: release.yml
docs/: MyBooks_WebAPI.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: genre-presets.json
src-tauri/resources/epub-assets/: mybooks.css
src-tauri/resources/epub-assets/chapter-styles/: style-names.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cover.rs  export.rs  genre.rs  mod.rs  mybooks.rs  parse.rs  preview.rs
src-tauri/src/epub/: builder.rs
src-tauri/src/models/: mod.rs
src-tauri/src/mybooks/: client.rs  session.rs
src-tauri/src/parser/: chapter.rs  encoding.rs  mod.rs
src-tauri/templates/: chapter.xhtml.tera  cover.xhtml.tera
src/components/config/: AiPromptPanel.tsx  CoverConfig.tsx  CoverPreview.tsx  CoverTemplateCarousel.tsx  EpubPreview.tsx  GenreSelector.tsx  IllustrationConfig.tsx
src/components/export/: ExportButton.tsx  ExportLog.tsx  ExportSummary.tsx  MyBooksPublishButton.tsx
src/components/import/: ChapterTable.tsx  FileDropZone.tsx  MyBooksEntryButton.tsx  MyBooksLoginModal.tsx  MyBooksSearchPanel.tsx  ParseProgress.tsx  RegexInput.tsx
src/components/layout/: AboutDialog.tsx  AppHeader.tsx  (+1 more)
src/context/: BookContext.tsx
src/hooks/: useEpubPreview.ts  useGenrePresets.ts  useMyBooksSession.ts  useTauriEvent.ts
src/types/: index.ts
src/utils/: aiPrompt.ts  constants.ts
(+3 files in other folders)
