[package]
name = "mynovel2epub"
version = "0.1.0"
description = "将本地 TXT 小说转换为 EPUB 电子书"
authors = ["Horky"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mynovel2epub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
fancy-regex = "0.14"
encoding_rs = "0.8"
tauri-plugin-dialog = "2"
image = "0.25"
imageproc = "0.24"
ab_glyph = "0.2"
epub-builder = "0.7"
tera = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

